# pygrocy2

./: .gitignore  README.md  RELEASE_GUIDE.md  docker-compose.yml  mkdocs.yml  prod.env.example  pyproject.toml  taskfile.yml
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
docs/: example.ipynb  getting-started.md  index.md
grocy/: grocy.py  grocy_api_client.py
grocy/data_models/: chore_log.py
grocy/managers/: batteries.py  chores.py  chores_log.py  equipment.py  generic.py  meal_plan.py  recipes.py  shopping_list.py  stock.py  tasks.py  users.py
pygrocy2/: grocy.py  grocy_api_client.py
pygrocy2/data_models/: chore.py  chore_log.py  equipment.py
test/: conftest.py  test_chores.py  test_chores_log.py  test_equipment.py  test_grocy.py  test_shoppinglist.py
test/cassettes/test_equipment/: TestEquipment.test_get_equipment_details.yaml  TestEquipment.test_get_equipment_details_non_existent.yaml  TestEquipment.test_get_equipment_filters_invalid.yaml  TestEquipment.test_get_equipment_filters_valid.yaml  TestEquipment.test_get_equipment_list.yaml  TestEquipment.test_get_equipment_with_details.yaml
test/cassettes/test_tasks/: TestTasks.test_complete_task_valid_with_defaults.yaml
