[build-system]
requires = ["setuptools>=69", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "grocy-py"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "George Green", email = "iamkarlson@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pydantic~=2.12.2",
    "tzdata",
    "tzlocal~=5.2"
]
license =  "MIT"

[project.urls]
Homepage = "https://github.com/iamkarlson/grocy-py"
[dependency-groups]
dev = [
    "responses>=0.21,<0.26",
    "pre-commit",
    "isort",
    "pytest",
    "pytest-cov",
    "vcrpy",
    "pytest-recording",
    "pytest-mock",
    "urllib3==2.6.3",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
]

[tool.setuptools.packages.find]
include = ["grocy*"]

[tool.uv]
package = true
publish-url = "https://upload.pypi.org/legacy/"

[tool.ruff]
extend-exclude = ["test/cassettes"]

[tool.ruff.format]
exclude = ["test/cassettes"]

[tool.setuptools_scm]
# Fallback version for local development without git tags
fallback_version = "0.0.0.dev0"
